--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Jari Korhonen
-description: I am working as Research Assistant Professor at Research Institute for Future Media Computing, Shenzhen University. On this page, I will present my research highlights and share the resources, such as program code.
+description: I am working as Research Assistant Professor at [Research Institute for Future Media Computing](http://http://futuremedia.szu.edu.cn/), [Shenzhen University](http://www1.szu.edu.cn/2014/en/). On this page, I will present my research highlights and share the resources, such as program code.
