--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
 theme: jekyll-theme-minimal
 title: Jari Korhonen
-description: ![Jari]https://avatars3.githubusercontent.com/u/20440491?s=460&v=4 
-I am working as Research Assistant Professor at Research Institute for Future Media Computing, Shenzhen University. On this page, I will present my research highlights and share the resources, such as program code.
+description: I am working as Research Assistant Professor at Research Institute for Future Media Computing, Shenzhen University. On this page, I will present my research highlights and share the resources, such as program code.
